[gd_scene load_steps=3 format=3 uid="uid://c8m4n9p2qr7td"]

[ext_resource type="Script" path="res://scripts/ui/hud.gd" id="1_hud_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0, 0, 0, 0.7)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_hud_script")

[node name="SpeedContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -120.0
offset_right = -20.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="SpeedLabel" type="Label" parent="SpeedContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -25.0
offset_right = 40.0
offset_bottom = 5.0
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedUnitsLabel" type="Label" parent="SpeedContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = 5.0
offset_right = 30.0
offset_bottom = 25.0
text = "km/h"
horizontal_alignment = 1

[node name="RPMContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -140.0
offset_right = -20.0
offset_bottom = -125.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="RPMBar" type="ProgressBar" parent="RPMContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 2.0
offset_right = -25.0
offset_bottom = -2.0
max_value = 100.0

[node name="GearLabel" type="Label" parent="RPMContainer"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -7.0
offset_right = -5.0
offset_bottom = 7.0
text = "1"
horizontal_alignment = 1

[node name="NitroContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -180.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="NitroLabel" type="Label" parent="NitroContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = 20.0
text = "NITRO 100%"
horizontal_alignment = 1

[node name="NitroBar" type="ProgressBar" parent="NitroContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = -20.0
offset_right = -5.0
offset_bottom = -5.0
value = 100.0

[node name="DriftContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -40.0
offset_right = 220.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="DriftScoreLabel" type="Label" parent="DriftContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -10.0
offset_right = 80.0
offset_bottom = 10.0
text = "DRIFT: 0"
horizontal_alignment = 1

[node name="DriftMultiplierLabel" type="Label" parent="DriftContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = -15.0
text = "x2.0"
horizontal_alignment = 1

[node name="MinimapContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 220.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MinimapViewport" type="SubViewport" parent="MinimapContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 5.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
size = Vector2i(190, 190)

[node name="MinimapCamera" type="Camera3D" parent="MinimapContainer/MinimapViewport"]
projection = 1
size = 100.0

[node name="MissionPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -150.0
offset_right = 320.0
offset_bottom = -50.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="MissionContainer" type="VBoxContainer" parent="MissionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="MissionTitleLabel" type="Label" parent="MissionPanel/MissionContainer"]
layout_mode = 2
text = "Nazwa Misji"
horizontal_alignment = 1

[node name="MissionProgressBar" type="ProgressBar" parent="MissionPanel/MissionContainer"]
layout_mode = 2

[node name="ObjectiveLabels" type="VBoxContainer" parent="MissionPanel/MissionContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TimeContainer" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 220.0
offset_bottom = -20.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="TimeLabel" type="Label" parent="TimeContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 30.0
text = "12:30"
horizontal_alignment = 1

[node name="WeatherLabel" type="Label" parent="TimeContainer"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -25.0
offset_right = -10.0
offset_bottom = -10.0
text = "Pogodnie"
horizontal_alignment = 1

[node name="PauseMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PauseContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0

[node name="PauseTitle" type="Label" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "PAUZA"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "WZNÓW"

[node name="RestartButton" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "RESTART"

[node name="SettingsButton" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "USTAWIENIA"

[node name="MainMenuButton" type="Button" parent="PauseMenu/PauseContainer"]
layout_mode = 2
text = "MENU GŁÓWNE"

[connection signal="pressed" from="PauseMenu/PauseContainer/ResumeButton" to="." method="resume_game"]
[connection signal="pressed" from="PauseMenu/PauseContainer/MainMenuButton" to="." method="return_to_main_menu"]